fixed divs and card alignment

--- a/app/assets/stylesheets/components/_request.scss
+++ b/app/assets/stylesheets/components/_request.scss
@@ -1,14 +1,14 @@
-.pending {
-  color: $blue
+// .pending {
+//   color: $blue
 
-}
+// }
 
-.accepted {
-  color: $green
+// .accepted {
+//   color: $green
 
-}
+// }
 
-.rejected {
-  color: $red
+// .rejected {
+//   color: $red
 
-}
+// }
